--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
             <p>Here is a picture of my pet tiger. He sleeps during the day and hunts at night.</p>
             <img src="resources/media/mack2.jpg" alt="device" width="290" height="420"/>
         </div>
-        <script src="sketch.js"></script>
+        <script src="../sketch.js"></script>
     </body>
 </html>
